@@ -16,6 +16,7 @@ TODO list for Olive
  - Implement 'bzr missing' (phanatic)
  - Implement 'bzr uncommit' (phanatic)
  - Implement bundle handling - at least creating them (phanatic)
- - Testing on Windows platform (phanatic)
+[DONE] Testing on Windows platform (phanatic)
  - i18n/l10n with gettext (phanatic)
  - Bookmarks should have a 'title' attribute (phanatic)
+ - Open files on double-click, and add Open option to context menu (Aaadam)
