@@ -1,3 +1,9 @@
+2006-08-19  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>
+
+    * olive/frontend/gtk/__init__.py: added win32 compatibility
+    * olive/frontend/gtk/menu.py: added win32 compatibility
+    * olive/frontend/gtk/branch.py: fixed a typo
+
 2006-08-15  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>
 
     * olive/frontend/gtk/menu.py: upgraded according to the OliveDialog API
